--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.3",
     "@react-spring/web": "^9.7.5",
     "@tailwindcss/vite": "^4.0.9",
     "framer-motion": "^12.4.10",
+    "lottie-web": "^5.12.2",
     "qr-code-styling": "^1.9.1",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
